--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,32 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#">Bailey Beck</a>
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance">
+        <img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-right" alt="BMO Dance">
+        <img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance">
+        <img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-right" alt="BMO Dance">
+    </div>
 </body>
 </html>
