added card to index, added media screen to 640, 768, & 980

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -12,7 +13,7 @@
 
 </head>
 <body>
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm" id="navParent">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +35,19 @@
         </nav>
 
     <div class="container">
-        stuff index
+        <h4>About Me</h4>
+            <hr>
+      <div class="card" style="width: 31rem;">
+          <div class="card-body">
+              <img src="./assets/images/IMG_0536 copy.jpeg" alt="Photo of myself in Scotland" width="200px">
+              <p class="card-text">Writing about yourself is a bit awkward, the hardest part is figuring out how to start talking about yourself - but I'll give it shot. Professionally, my career in coding has only
+                beginning but I am incredibly excited about this field. The possibities of code seem endless and I've found it difficult to put the assignments down because it's such a fun puzzle.
+                I graduated with honors from University of North Texas, my Bachelor of Science degree is in Integrative Studies with focuses in Biology, Public Service, and Economics.  
+                 <br><br>
+                My primary goal is to continue learning all that I can about coding, as this field is so vast and has no shortages of new things to learn. My plan is to use it to pursue a career in 
+                bioinformatics. However, I'm leaving my options open moving forward from this class because there are so many avenues left to explore.</p>
+          </div>
+      </div>
     </div>
     
 </body>
