--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm" id="navParent">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,13 +34,15 @@
     </nav>
 
     <div class="container">
+            <h4>Portfolio</h4>
+            <hr>
+        <div class="row mb-4">
+        <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
+        <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
+        </div>
         <div class="row">
-        <div class="col-md-4"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"></div>
-        <div class="col-md-4"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"></div>
-        <div class="row">
-        <div class="col-md-4"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"></div>
-        <div class="col-md-4"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"></div>
-        <div class="row"></div>
+        <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
+        <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
         </div>
     </div>
 </body>
