changed card info on index page, adjusted images to respond to media screens

--- a/index.html
+++ b/index.html
@@ -36,21 +36,29 @@
 
   <div class="container">
       <h6>About Me</h6>
-    
-    <div class="row">
-      <div class="col-md-3">
-        <img src="./assets/images/IMG_0536 copy.jpeg" alt="Photo of myself in Scotland" class="img-thumbnail">
+      <div class="row mb-4">
+          ​<picture>
+              <source srcset="./assets/images/IMG_0536.jpeg 1x, ./assets/images/IMG_0536.jpeg 2x,
+              ./assets/images/IMG_0536.jpeg 3x" type="image/svg+xml">
+              <img src="./assets/images/IMG_0536.jpeg" id="profile-img" class="img-fluid img-thumbnail" alt="Photo of myself in Scotland">
+            </picture>
       </div>
-      <div class="col-md-9">
-        <p>Writing about yourself is a bit awkward, the hardest part is figuring out how to start talking about yourself - but I'll give it shot. Professionally, my career in coding has only
+      <div class="row mb-4">
+        <p>
+            Writing about yourself is a bit awkward, the hardest part is figuring out how to start talking about yourself - but I'll give it shot. Professionally, my career in coding has only
             beginning but I am incredibly excited about this field. The possibities of code seem endless and I've found it difficult to put the assignments down because it's such a fun puzzle.
             I graduated with honors from University of North Texas, my Bachelor of Science degree is in Integrative Studies with focuses in Biology, Public Service, and Economics.  
               <br><br>
             My primary goal is to continue learning all that I can about coding, as this field is so vast and has no shortages of new things to learn. My plan is to use it to pursue a career in 
             bioinformatics. However, I'm leaving my options open moving forward from this class because there are so many avenues left to explore.
-            </p>
+        </p>
       </div>
   </div>
     
+  <div class="card text-center">
+    <div class="card-footer text-muted">
+        Copyright
+    </div>
+  </div>
 </body>
 </html>
