--- a/contact.html
+++ b/contact.html
@@ -52,5 +52,11 @@
             <button type="button" class="btn btn-outline-secondary">Submit</button>
         </form>
 </div>
+
+<div class="card text-center">
+    <div class="card-footer text-muted">
+        Copyright
+    </div>
+</div>
 </body>
 </html>
