--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <div class="container">
             <h6>Portfolio</h6>
             <hr>
-        <div class="row mb-3">
+        <div class="row mb-2">
         <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
         <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
         </div>
@@ -45,5 +45,11 @@
         <div class="col-md-4 photo"><img src="./assets/images/18480-adventure-time-beemo.gif" class="rounded float-left" alt="BMO Dance"><h3>BMO</h3></div>
         </div>
     </div>
+
+<div class="card text-center">
+    <div class="card-footer text-muted">
+        Copyright
+    </div>
+</div>
 </body>
 </html>
